<resources>
    <string name="app_name">MyImageGenerator</string>
    <string name="home">HOME</string>
    <string name="generator">GENERADOR</string>
    <string name="profile">PERFIL</string>
    <string name="settings">CONFIGURACION</string>
    <string name="generate">GENERAR IMAGEN</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTRO</string>
    <string name="image_input">Escribir imagen</string>
    <string name="save">GUARDAR</string>
    <string name="variant">VARIANTE</string>
    <string name="prompt">prompt</string>
    <string name="my_images">Mis imagenes</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_btn">INGRESAR</string>
    <string name="register_btn">CREAR CUENTA</string>
    <string name="not_account">Don\'t have an account? Register here</string>
    <string name="have_account">Already have an account? Login here</string>
    <string name="generals">Generales</string>
    <string name="dark_mode">Modo oscuro</string>
    <string name="dev_mode">Modo desarrollador</string>
    <string name="notifications">Notificaciones</string>
    <string name="generated_image">imagen generada</string>
    <string name="image_generator">Image Generator</string>
    <string name="logout">Cerrar sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>