<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navgraph"
    app:startDestination="@id/fragment_home">

    <fragment
        android:id="@+id/fragment_home"
        android:name="com.example.myimagegenerator.fragments.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/fragment_generator"
        android:name="com.example.myimagegenerator.fragments.GeneratorFragment"
        android:label="@string/generator"
        tools:layout="@layout/fragment_generator" />
    <fragment
        android:id="@+id/fragment_profile"
        android:name="com.example.myimagegenerator.fragments.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.example.myimagegenerator.fragments.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
</navigation>