<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        android:textColor="@color/purple"
        android:textSize="32sp"
        android:textStyle="bold"
        android:fontFamily="@font/roboto_bold"/>

    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login_text"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="email"/>

    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/email_edittext"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:autofillHints="password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/logout_button"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_edittext"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/btn_style"
        android:text="@string/login_btn" />

    <TextView

        android:id="@+id/textView_register_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logout_button"
        android:layout_marginStart="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="50dp"
        android:text="@string/not_account" />

</RelativeLayout>