<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="50dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtSettingsFragmentTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:textColor="@color/light_purple"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewGenerales"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="50dp"
        android:gravity="center_vertical"
        android:paddingHorizontal="24dp"
        android:text="@string/generals"
        android:textAlignment="gravity"
        android:textColor="@color/purple"
        android:textSize="14sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/textViewModoOscuro"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:lineSpacingExtra="5sp"
            android:text="@string/dark_mode"
            android:textColor="#001E2F"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/modoOscuroSwitch"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_switch"
            android:backgroundTint="#D6D4D5" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="24dp">

        <TextView
            android:id="@+id/textViewNotificaciones"
            android:layout_width="261dp"
            android:layout_height="wrap_content"
            android:lineSpacingExtra="5sp"
            android:text="@string/notifications"
            android:textColor="#001E2F"
            android:textSize="20sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/notificacionesSwitch3"
            android:layout_width="56dp"
            android:layout_height="48dp"
            android:background="@drawable/rounded_switch"
            android:backgroundTint="#D6D4D5"
            android:scaleX="1"
            android:scaleY="1"
            android:scrollHorizontally="false" />

    </LinearLayout>

</LinearLayout>